force-app/main/default/objects/Project_Acceptance__c/fields/UE_Milestone__c.field-meta.xml
<CustomField>
    <fullName>UE_Milestone__c</fullName>
    <label>UE Milestone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Project Acceptance UE</fullName>
            </value>
            <value>
                <fullName>Ground Lease UE</fullName>
            </value>
            <value>
                <fullName>Construction UE</fullName>
            </value>
            <value>
                <fullName>Development UE</fullName>
            </value>
            <value>
                <fullName>SLA UE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>