force-app/main/default/objects/Project_Acceptance__c/fields/UEVersion__c.field-meta.xml
<CustomField>
    <fullName>UEVersion__c</fullName>
    <formula>$CustomMetadata.UE_Config__mdt.UEVersion.UEConfigValue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UEVersion</label>
    <type>Text</type>
</CustomField>