force-app/main/default/objects/Project_Acceptance__c/fields/Unlevered_IRR_w_Pipeline_Colo__c.field-meta.xml
<CustomField>
    <fullName>Unlevered_IRR_w_Pipeline_Colo__c</fullName>
    <label>Unlevered IRR w/ Pipeline Colo</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>