force-app/main/default/objects/Project_Acceptance__c/fields/Uploaded_UEVersion__c.field-meta.xml
<CustomField>
    <fullName>Uploaded_UEVersion__c</fullName>
    <label>Uploaded UEVersion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>