force-app/main/default/objects/Project_Acceptance__c/fields/VzW_Additional_Scope__c.field-meta.xml
<CustomField>
    <fullName>VzW_Additional_Scope__c</fullName>
    <label>VzW Additional Scope</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>45K+Mount+Civil</fullName>
            </value>
            <value>
                <fullName>45k Subsidy</fullName>
            </value>
            <value>
                <fullName>Mount+Remainder</fullName>
            </value>
            <value>
                <fullName>Mount Only</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>RELO Reimbursable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>