force-app/main/default/objects/Project_Acceptance__c/fields/X8_Year_IRR__c.field-meta.xml
<CustomField>
    <fullName>X8_Year_IRR__c</fullName>
    <label>Unlevered IRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>