force-app/main/default/objects/Project_Acceptance__c/fields/Zoning_Analysis_Determination__c.field-meta.xml
<CustomField>
    <fullName>Zoning_Analysis_Determination__c</fullName>
    <label>Zoning Analysis Determination</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Zoning Exhaust</fullName>
            </value>
            <value>
                <fullName>Candidate Search</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>