force-app/main/default/objects/Project_Acceptance__c/validationRules/Being_Mandatory_for_Update.validationRule-meta.xml
<ValidationRule>
    <fullName>Being_Mandatory_for_Update</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
!ISNEW(),
ISCHANGED(Category__c),
ISBLANK(Project_Management_Director__c)
)</errorConditionFormula>
    <errorMessage>Project Management Director is Mandatory field.</errorMessage>
</ValidationRule>