force-app/main/default/objects/Project_Acceptance__c/validationRules/Check_On_UE_Version.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_On_UE_Version</fullName>
    <active>false</active>
    <errorConditionFormula>if( Not(IsBlank( Uploaded_UEVersion__c))&amp;&amp;  Uploaded_UEVersion__c != UEVersion__c ,true,false)</errorConditionFormula>
    <errorMessage>UE Version uploaded doesn&apos;t match the latest version of UE. Please download latest version and then upload UE.</errorMessage>
</ValidationRule>