force-app/main/default/objects/Project_Acceptance__c/validationRules/Locking_for_Update.validationRule-meta.xml
<ValidationRule>
    <fullName>Locking_for_Update</fullName>
    <active>false</active>
    <errorConditionFormula>AND (
    !ISNEW(),  
    OR (
        ISPICKVAL(PRIORVALUE( Approval_Status__c ), &apos;Approved&apos;),
        ISPICKVAL(PRIORVALUE( Approval_Status__c ), &apos;Rejected&apos;),
        ISPICKVAL(PRIORVALUE( Approval_Status__c ), &apos;Auto Approved&apos;),
        ISPICKVAL(PRIORVALUE( Approval_Status__c ), &apos;Bulk Approved&apos;)
    ), 
    Not(IsChanged( Project__c ))
)</errorConditionFormula>
    <errorMessage>Can&apos;t Modify Approved/Auto Approved/Bulk Approved  Record</errorMessage>
</ValidationRule>