force-app/main/default/objects/Project_Acceptance__c/validationRules/Mandatory_for_Development_Category.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_for_Development_Category</fullName>
    <active>true</active>
    <description>Mandatory information for development record</description>
    <errorConditionFormula>AND (
    NOT($Profile.Name == &apos;System Administrator&apos;),
    !ISNEW(), 
    ISPICKVAL(Category__c,&apos;Development&apos;),
    OR (
        ISBLANK(SBO_accept_reject_F__c) , 
        LEN(SD_Narrative__c)=0
    )
)</errorConditionFormula>
    <errorMessage>SD Narrative and Site Build Opportunity Accept/Reject (F) information is being mandatory for Category Development</errorMessage>
</ValidationRule>