force-app/main/default/objects/Project_Acceptance__c/validationRules/Project_Type_Match_Site_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Project_Type_Match_Site_Type</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  TEXT(Category__c) = &quot;Development&quot;,
  NOT(ISBLANK(TEXT(Site__r.strk__Site_Type__c))),
  OR(
    TEXT(Site__r.strk__Site_Type__c) = &quot;BTS&quot;,
    TEXT(Site__r.strk__Site_Type__c) = &quot;BTS-P&quot;,
    TEXT(Site__r.strk__Site_Type__c) = &quot;DDBTS&quot;,
    TEXT(Site__r.strk__Site_Type__c) = &quot;DDBTS-P&quot;
  ),
  UPPER(TEXT(Site__r.strk__Site_Type__c)) != UPPER(TEXT(Project_Type__c))
)</errorConditionFormula>
    <errorMessage>Please check project type , it needs to match site type</errorMessage>
</ValidationRule>