force-app/main/default/objects/Project_Acceptance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Site_ID__c</columns>
    <columns>Site__c</columns>
    <columns>Category__c</columns>
    <columns>NAME</columns>
    <columns>X8_Year_IRR__c</columns>
    <columns>Total_Capex__c</columns>
    <columns>BD_Lead__c</columns>
    <columns>Project_Management_Director__c</columns>
    <columns>Approval_Assignment_Flag__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>