force-app/main/default/objects/Project_Acceptance__c/listViews/Development_Projects.listView-meta.xml
<ListView>
    <fullName>Development_Projects</fullName>
    <columns>Site_ID__c</columns>
    <columns>Site__c</columns>
    <columns>Category__c</columns>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>X8_Year_IRR__c</columns>
    <columns>Total_Capex__c</columns>
    <columns>BD_Lead__c</columns>
    <columns>Project_Management_Director__c</columns>
    <columns>Approval_Assignment_Flag__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Category__c</field>
        <operation>equals</operation>
        <value>Development</value>
    </filters>
    <label>Development Acceptance</label>
</ListView>